YES SCRATCHPAD FUNCTION

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -63,3 +63,8 @@ tooltip label {
     background: @color1;
     color: @foreground;
 }
+
+#workspaces button.special {
+    background: @color3;
+    color: @foreground;
+}
