changed ncspot to spt

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -123,6 +123,6 @@ tooltip label {
     background: @bg_base;
 }
 
-#custom-media.custom-ncspot {
+#custom-media.custom-spt {
     color: @color4;
 }
