--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 /*
  * vim: ft=less
  */
-@import url('/home/yukna/.cache/wal/colors-waybar.css');
+@import url('colors-waybar.css');
 @define-color bg_base alpha (@background, 0.8);
 
 * {
