idling and lockscreen all working with themes

--- a/.config/waybar/colors-waybar.css
+++ b/.config/waybar/colors-waybar.css
@@ -1,20 +1,20 @@
-@define-color foreground #E0E1DE;
-@define-color background #0D0807;
-@define-color cursor #E0E1DE;
+@define-color foreground #EDDCE0;
+@define-color background #0E0907;
+@define-color cursor #EDDCE0;
 
-@define-color color0 #100A09;
-@define-color color1 #478394;
-@define-color color2 #498997;
-@define-color color3 #83743F;
-@define-color color4 #4E5EA2;
-@define-color color5 #5A95AF;
-@define-color color6 #A54F94;
-@define-color color7 #CBCCC7;
-@define-color color8 #8E8E8B;
-@define-color color9 #539AAC;
-@define-color color10 #6EAAB9;
-@define-color color11 #AE9C56;
-@define-color color12 #5A6AAF;
-@define-color color13 #98BDCD;
-@define-color color14 #C383B8;
-@define-color color15 #CBCCC7;
+@define-color color0 #110B09;
+@define-color color1 #4B829B;
+@define-color color2 #477F94;
+@define-color color3 #8D7D44;
+@define-color color4 #4E5BA2;
+@define-color color5 #A54F86;
+@define-color color6 #5D9AB1;
+@define-color color7 #DDC5CB;
+@define-color color8 #9A898E;
+@define-color color9 #5D99B1;
+@define-color color10 #5394AC;
+@define-color color11 #AE9956;
+@define-color color12 #5A68AF;
+@define-color color13 #C383AC;
+@define-color color14 #9BC1CF;
+@define-color color15 #DDC5CB;
