--- a/.config/wofi/style_icon_launcher.css
+++ b/.config/wofi/style_icon_launcher.css
@@ -1,4 +1,4 @@
-@import url('/home/yukna/.cache/wal/colors-waybar.css');
+@import url('.config/wofi/colors.css');
 @define-color bg_base alpha (@background, 0.9);
 
 window {
