back to foot term

--- a/.config/waybar/colors-waybar.css
+++ b/.config/waybar/colors-waybar.css
@@ -6,7 +6,7 @@
 @define-color color1 #6E4035;
 @define-color color2 #83623F;
 @define-color color3 #945B47;
-@define-color color4 #A95F51;
+@define-color color4 #AC6153;
 @define-color color5 #977249;
 @define-color color6 #A97151;
 @define-color color7 #ECC1A9;
