--- a/.config/wofi/colors.css
+++ b/.config/wofi/colors.css
@@ -1,20 +1,20 @@
-@define-color foreground #F7D9C8;
-@define-color background #080501;
-@define-color cursor #F7D9C8;
+@define-color foreground #A9A8AA;
+@define-color background #020103;
+@define-color cursor #A9A8AA;
 
-@define-color color0 #0A0602;
-@define-color color1 #6E4035;
-@define-color color2 #83623F;
-@define-color color3 #945B47;
-@define-color color4 #AC6153;
-@define-color color5 #977249;
-@define-color color6 #A97151;
-@define-color color7 #ECC1A9;
-@define-color color8 #A58776;
-@define-color color9 #7C483C;
-@define-color color10 #976D49;
-@define-color color11 #A2654E;
-@define-color color12 #A55D50;
-@define-color color13 #9E784C;
-@define-color color14 #C59C87;
-@define-color color15 #ECC1A9;
+@define-color color0 #2D2B2F;
+@define-color color1 #322753;
+@define-color color2 #6B356E;
+@define-color color3 #3F4F83;
+@define-color color4 #6A4086;
+@define-color color5 #7F3D65;
+@define-color color6 #574A9B;
+@define-color color7 #7C7B7E;
+@define-color color8 #565658;
+@define-color color9 #402956;
+@define-color color10 #723A78;
+@define-color color11 #495D97;
+@define-color color12 #7C4A9B;
+@define-color color13 #914574;
+@define-color color14 #6859AF;
+@define-color color15 #7C7B7E;
