--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -77,6 +77,7 @@ tooltip label {
 #custom-weather,
 #clock,
 #custom-launch_app,
+#custom-powermenu,
 #hyprland-workspaces,
 #hyprland-submap,
 #hyprland-window,
