--- a/.config/waybar/colors-waybar.css
+++ b/.config/waybar/colors-waybar.css
@@ -1,20 +1,20 @@
-@define-color foreground #A9A8AA;
-@define-color background #020103;
-@define-color cursor #A9A8AA;
+@define-color foreground #E0E1DE;
+@define-color background #0D0807;
+@define-color cursor #E0E1DE;
 
-@define-color color0 #2D2B2F;
-@define-color color1 #322753;
-@define-color color2 #6B356E;
-@define-color color3 #3F4F83;
-@define-color color4 #6A4086;
-@define-color color5 #7F3D65;
-@define-color color6 #574A9B;
-@define-color color7 #7C7B7E;
-@define-color color8 #565658;
-@define-color color9 #402956;
-@define-color color10 #723A78;
-@define-color color11 #495D97;
-@define-color color12 #7C4A9B;
-@define-color color13 #914574;
-@define-color color14 #6859AF;
-@define-color color15 #7C7B7E;
+@define-color color0 #100A09;
+@define-color color1 #478394;
+@define-color color2 #498997;
+@define-color color3 #83743F;
+@define-color color4 #4E5EA2;
+@define-color color5 #5A95AF;
+@define-color color6 #A54F94;
+@define-color color7 #CBCCC7;
+@define-color color8 #8E8E8B;
+@define-color color9 #539AAC;
+@define-color color10 #6EAAB9;
+@define-color color11 #AE9C56;
+@define-color color12 #5A6AAF;
+@define-color color13 #98BDCD;
+@define-color color14 #C383B8;
+@define-color color15 #CBCCC7;
