--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -57,7 +57,7 @@ tooltip label {
 
 #workspaces button.special {
     background: @color3;
-    color: @foreground;
+    color: @background;
 }
 
 #workspaces button.urgent {
