Change font to nfm to stop aliasing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,7 +5,7 @@
 @define-color bg_base alpha (@background, 0.8);
 
 * {
-    font-family: JetBrains Mono NFP;
+    font-family: JetBrains Mono NFM;
     font-size: 14px;
     min-height: 0;
     border-radius: 10px;
