--- a/.config/waybar/colors-waybar.css
+++ b/.config/waybar/colors-waybar.css
@@ -1,20 +1,20 @@
-@define-color foreground #CCD6FF;
-@define-color background #080C1C;
-@define-color cursor #CCD6FF;
+@define-color foreground #FFFFFF;
+@define-color background #16181A;
+@define-color cursor #FFFFFF;
 
-@define-color color0 #080C1C;
-@define-color color1 #FF007C;
-@define-color color2 #B5EE38;
-@define-color color3 #FF9E64;
-@define-color color4 #234B85;
-@define-color color5 #BD98FF;
-@define-color color6 #8CFFFE;
-@define-color color7 #CCD6FF;
-@define-color color8 #394779;
-@define-color color9 #FF757F;
-@define-color color10 #00D9BD;
-@define-color color11 #FFC777;
-@define-color color12 #0057C4;
-@define-color color13 #A86DFF;
-@define-color color14 #7DCFFF;
-@define-color color15 #4C5B91;
+@define-color color0 #16181A;
+@define-color color1 #FF6E5E;
+@define-color color2 #5EFF6C;
+@define-color color3 #F1FF5E;
+@define-color color4 #5EA1FF;
+@define-color color5 #BD5EFF;
+@define-color color6 #5EF1FF;
+@define-color color7 #FFFFFF;
+@define-color color8 #3C4048;
+@define-color color9 #FF6E5E;
+@define-color color10 #5EFF6C;
+@define-color color11 #F1FF5E;
+@define-color color12 #5EA1FF;
+@define-color color13 #BD5EFF;
+@define-color color14 #5EF1FF;
+@define-color color15 #FFFFFF;
