--- a/.config/wofi/colors.css
+++ b/.config/wofi/colors.css
@@ -1,20 +1,19 @@
-@define-color foreground #FFFFFF;
-@define-color background #16181A;
-@define-color cursor #FFFFFF;
-
-@define-color color0 #16181A;
-@define-color color1 #FF6E5E;
-@define-color color2 #5EFF6C;
-@define-color color3 #F1FF5E;
-@define-color color4 #5EA1FF;
-@define-color color5 #BD5EFF;
-@define-color color6 #5EF1FF;
-@define-color color7 #FFFFFF;
-@define-color color8 #3C4048;
-@define-color color9 #FF6E5E;
-@define-color color10 #5EFF6C;
-@define-color color11 #F1FF5E;
-@define-color color12 #5EA1FF;
-@define-color color13 #BD5EFF;
-@define-color color14 #5EF1FF;
-@define-color color15 #FFFFFF;
+@define-color background #16181a;
+@define-color foreground #ffffff;
+@define-color cursor #ffffff;
+@define-color color0 #16181a;
+@define-color color8 #3c4048;
+@define-color color1 #ff6e5e;
+@define-color color9 #ff6e5e;
+@define-color color2 #5eff6c;
+@define-color color10 #5eff6c;
+@define-color color3 #f1ff5e;
+@define-color color11 #f1ff5e;
+@define-color color4 #5ea1ff;
+@define-color color12 #5ea1ff;
+@define-color color5 #bd5eff;
+@define-color color13 #bd5eff;
+@define-color color6 #5ef1ff;
+@define-color color14 #5ef1ff;
+@define-color color7 #ffffff;
+@define-color color15 #ffffff;
