--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,24 +1,55 @@
-
 @import url('.config/wofi/colors.css');
-@define-color bg_base alpha (@background, 0.9);
 
-window {
-    border: 2px solid @color14;
-    border-radius: 10px;
-    font-family: monospace;
-    font-size: 14px;
-    background-color: @bg_base;
+*{
+    font-family: JetBrainsMono Nerd Font;
+    font-size: 1.04em;
+}
+
+window{
+    border-radius: 5px;
+    border: 2px;
+    border-color: @color2;
+    color: @foreground;
+    background-color: alpha (@background, 0.9);
+}
+
+#input {
+    margin: 0px;
+    margin-bottom: 10px;
+    border: none;
+    color: @foreground;
+    background-color: transparent;
 }
 
 #outer-box {
-    margin: 10px;
+    margin: 5px;
+    padding: 5px;
+}
+#inner-box {
+    margin: 5px;
+    padding: 5px;
 }
 
 #text {
-    margin: 10px;
-    font-size: 20px;
+    padding: 5px;
+    color: @foreground;
+}
+#entry {
+    padding: 10px;
+    margin: 2px;
 }
 
 #entry:selected {
-    background-color: @color5;
+    background-color: @color8;
+}
+#text:selected {
+    color: @color5
+}
+
+#scroll {
+}
+
+#img {
+    border-radius: 10px;
+    margin-right: 10px
 }
