--- a/.config/waybar/colors-waybar.css
+++ b/.config/waybar/colors-waybar.css
@@ -1,20 +1,27 @@
 @define-color foreground #FFFFFF;
-@define-color background #16181A;
+@define-color background #161616;
 @define-color cursor #FFFFFF;
 
-@define-color color0 #16181A;
-@define-color color1 #FF6E5E;
-@define-color color2 #5EFF6C;
-@define-color color3 #F1FF5E;
-@define-color color4 #5EA1FF;
-@define-color color5 #BD5EFF;
-@define-color color6 #5EF1FF;
-@define-color color7 #FFFFFF;
-@define-color color8 #3C4048;
-@define-color color9 #FF6E5E;
-@define-color color10 #5EFF6C;
-@define-color color11 #F1FF5E;
-@define-color color12 #5EA1FF;
-@define-color color13 #BD5EFF;
-@define-color color14 #5EF1FF;
-@define-color color15 #FFFFFF;
+/*
+*
+* Base16 Oxocarbon Dark
+* Author: shaunsingh/IBM
+*
+*/
+
+@define-color color0 #161616;
+@define-color color1 #262626;
+@define-color color2 #393939;
+@define-color color3 #525252;
+@define-color color4 #dde1e6;
+@define-color color5 #f2f4f8;
+@define-color color6 #ffffff;
+@define-color color7 #08bdba;
+@define-color color8 #3ddbd9;
+@define-color color9 #78a9ff;
+@define-color color10 #ee5396;
+@define-color color11 #33b1ff;
+@define-color color12 #ff7eb6;
+@define-color color13 #42be65;
+@define-color color14 #be95ff;
+@define-color color15 #82cfff;
