--- a/.config/nixos/modules/themes/waybar.css
+++ b/.config/nixos/modules/themes/waybar.css
@@ -1,16 +1,16 @@
-@define-color base00 #${colorScheme.palette.base00};
-@define-color base01 #${colorScheme.palette.base01};
-@define-color base02 #${colorScheme.palette.base02};
-@define-color base03 #${colorScheme.palette.base03};
-@define-color base04 #${colorScheme.palette.base04};
-@define-color base05 #${colorScheme.palette.base05};
-@define-color base06 #${colorScheme.palette.base06};
-@define-color base07 #${colorScheme.palette.base07};
-@define-color base08 #${colorScheme.palette.base08};
-@define-color base09 #${colorScheme.palette.base09};
-@define-color base0A #${colorScheme.palette.base0A};
-@define-color base0B #${colorScheme.palette.base0B};
-@define-color base0C #${colorScheme.palette.base0C};
-@define-color base0D #${colorScheme.palette.base0D};
-@define-color base0E #${colorScheme.palette.base0E};
-@define-color base0F #${colorScheme.palette.base0F};
+@define-color base00 #@base00@;
+@define-color base01 #@base01@;
+@define-color base02 #@base02@;
+@define-color base03 #@base03@;
+@define-color base04 #@base04@;
+@define-color base05 #@base05@;
+@define-color base06 #@base06@;
+@define-color base07 #@base07@;
+@define-color base08 #@base08@;
+@define-color base09 #@base09@;
+@define-color base0A #@base0A@;
+@define-color base0B #@base0B@;
+@define-color base0C #@base0C@;
+@define-color base0D #@base0D@;
+@define-color base0E #@base0E@;
+@define-color base0F #@base0F@;
