Reinvent the stylix wheel without homemanager

--- a/.config/wofi/colors.css
+++ b/.config/wofi/colors.css
@@ -1,19 +1,1 @@
-@define-color background #16181a;
-@define-color foreground #ffffff;
-@define-color cursor #ffffff;
-@define-color color0 #16181a;
-@define-color color8 #3c4048;
-@define-color color1 #ff6e5e;
-@define-color color9 #ff6e5e;
-@define-color color2 #5eff6c;
-@define-color color10 #5eff6c;
-@define-color color3 #f1ff5e;
-@define-color color11 #f1ff5e;
-@define-color color4 #5ea1ff;
-@define-color color12 #5ea1ff;
-@define-color color5 #bd5eff;
-@define-color color13 #bd5eff;
-@define-color color6 #5ef1ff;
-@define-color color14 #5ef1ff;
-@define-color color7 #ffffff;
-@define-color color15 #ffffff;
+/nix/store/jwb0ps0v6qvcq657gd83hl9q9mk03cjz-wofi.css
