--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -8,7 +8,7 @@
 window{
     border-radius: 5px;
     border: 2px;
-    border-color: @color2;
+    border-color: @color7;
     color: @foreground;
     background-color: alpha (@background, 0.9);
 }
@@ -33,6 +33,7 @@ window{
 #text {
     padding: 5px;
     color: @foreground;
+    background-color: transparent;
 }
 #entry {
     padding: 10px;
@@ -40,10 +41,10 @@ window{
 }
 
 #entry:selected {
-    background-color: @color8;
+    background-color: @color3;
 }
 #text:selected {
-    color: @color5
+    color: @color7
 }
 
 #scroll {
@@ -51,5 +52,6 @@ window{
 
 #img {
     border-radius: 10px;
+    background-color: transparent;
     margin-right: 10px
 }
