--- a/.config/wofi/style_icon_launcher.css
+++ b/.config/wofi/style_icon_launcher.css
@@ -8,7 +8,7 @@
 window{
     border-radius: 5px;
     border: 2px;
-    border-color: @color2;
+    border-color: @color7;
     color: @foreground;
     background-color: alpha (@background, 0.9);
 }
@@ -31,22 +31,24 @@ window{
 
 #text {
     color: @foreground;
+    background-color: transparent;
 }
 #entry {
     margin: 10px;
     padding: 5px;
 }
 #entry:selected {
-    background-color: @color8;
+    background-color: @color3;
 }
 #text:selected {
-    color: @color5
+    color: @color7
 }
 
 #scroll {
 }
 
 #img {
+    background-color: transparent;
     border-radius: 10px;
     margin: 10px
 }
