--- a/.config/waybar/progressbar.css
+++ b/.config/waybar/progressbar.css
@@ -3,11 +3,11 @@
 #custom-media {
     padding: 2px 10px;
     margin: 5px;
-    border: 1px solid @color14;
+    border: 1px solid @base0D;
     border-radius: 5;
 }
 
-@define-color progressbar_color alpha (@color3, 0.7);
+@define-color progressbar_color alpha (@base03, 0.7);
 #custom-media.0 {
 	background-image: linear-gradient(
 		to right,
