--- a/.config/nixos/modules/themes/templates/niriswitcher.css
+++ b/.config/nixos/modules/themes/templates/niriswitcher.css
@@ -30,7 +30,7 @@
   --highlight-color: #@base02@;
   --urgency-color: rgb(255, 69, 58);
   --indicator-focus-color: #@base0C@;
-  --indicator-color: #@base0A@;
+  --indicator-color: #@base03@;
 }
 
 #niriswitcher.background {
